Nueva actualuizacion Residente
He actualizado con las mejoras habladas de la reunion del 11/05/2025.
Tambien lo he documentado en swagger y javaDoc
